--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -17,7 +17,7 @@ html {
  */
 *, *::before, *::after {
   box-sizing: inherit;
-} 
+}
 
 /**
  * Basic styles for links
@@ -30,4 +30,150 @@ a {
     color: $text-color;
     text-decoration: underline;
   }
+}
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+body {
+  background-color: #192837;
+  font-family: "Titillium Web", Arial, sans-serif;
+  font-size: 20px;
+  margin: 0;
+}
+.container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+}
+input {
+  background-color: #126077;
+  border: 1px solid #3F7F93;
+  color: #A6CAE6;
+  font-family: "Titillium Web";
+  font-size: 20px;
+  line-height: 43px;
+  padding: 0 0.75em;
+  width: 400px;
+  -webkit-transition: all 0.35s ease-in;
+}
+textarea {
+  background-color: #070F24;
+  border: 1px solid #122435;
+  color: #606B88;
+  padding: 0.5em;
+  width: 100%;
+  -webkit-transition: all 0.35s ease-in;
+}
+input:active, input:focus, textarea:active, textarea:focus {
+  outline: 1px solid #48788B;
+}
+.btn {
+  background-color: #126178;
+  border: 1px solid #549EAF;
+  color: #549EAF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Titillium Web";
+  font-size: 20px;
+  line-height: 43px;
+  padding: 0 0.75em;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-transition: all 0.35s ease-in;
+}
+.btn:hover {
+  background-color: #1888A9;
+  color: #183035;
+}
+.debug {
+  bottom: 0;
+  position: fixed;
+  right: 0;
+}
+.debug__content {
+  font-size: 14px;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.35s ease-in;
+}
+.debug__content.is-active {
+  display: block;
+  max-height: 500px;
+}
+.debug__btn {
+  width: 100%;
+}
+.spoken-response {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.35s ease-in;
+}
+.spoken-response.is-active {
+  max-height: 400px;
+}
+.spoken-response__text {
+  background-color: #040E23;
+  color: #7584A2;
+  padding: 1em;
+}
+
+#spinner {
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  font-size: 10px;
+  opacity: 0;
+  &.active {
+    opacity: 1;
+  }
+}
+
+#spinner > div {
+  background-color: #126077;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+#spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+#spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+#spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+#spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+  20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes sk-stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% {
+       transform: scaleY(1.0);
+       -webkit-transform: scaleY(1.0);
+     }
 }
