added the grid initials

--- a/app/includes/_home.pug
+++ b/app/includes/_home.pug
@@ -1,2 +1,60 @@
-main
-  p Content goes here
+.campaign
+  .clearfix
+    .campaign__logo
+      img
+    .campaign__summary
+      h1.campaign__title Campaign Name
+      p.campaign__description Campaign Description
+    .farmraiser-logo
+      img
+  .campaign__products.clearfix
+    .campaign__product.clearfix
+      .product__img-wrapper
+        img
+      .product__summary
+        p.product__title Product Name
+        p.product__description Product Description
+        p.produce__vendor Vendor Name
+      .product__price
+        span price
+        span $
+    .campaign__product.clearfix
+      .product__img-wrapper
+        img
+      .product__summary
+        p.product__title Product Name
+        p.product__description Product Description
+        p.produce__vendor Vendor Name
+      .product__price
+        span price
+        span $
+    .campaign__product.clearfix
+      .product__img-wrapper
+        img
+      .product__summary
+        p.product__title Product Name
+        p.product__description Product Description
+        p.produce__vendor Vendor Name
+      .product__price
+        span price
+        span $
+    .campaign__product.clearfix
+      .product__img-wrapper
+        img
+      .product__summary
+        p.product__title Product Name
+        p.product__description Product Description
+        p.produce__vendor Vendor Name
+      .product__price
+        span price
+        span $
+    .campaign__product.clearfix
+      .product__img-wrapper
+        img
+      .product__summary
+        p.product__title Product Name
+        p.product__description Product Description
+        p.produce__vendor Vendor Name
+      .product__price
+        span price
+        span $
