--- a/app/includes/_scripts.pug
+++ b/app/includes/_scripts.pug
@@ -5,4 +5,5 @@ script(src='../bower_components/jquery/dist/jquery.js')
 // endbuild
 // build:js({app,.tmp}) scripts/main.js
 script(src='scripts/main.js')
+script(src='scripts/grid.js')
 // endbuild
