--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -17,7 +17,7 @@ html {
  */
 *, *::before, *::after {
   box-sizing: inherit;
-} 
+}
 
 /**
  * Basic styles for links
@@ -30,4 +30,119 @@ a {
     color: $text-color;
     text-decoration: underline;
   }
+}
+* {
+  box-sizing: border-box;
+}
+.campaign {
+  position: relative;
+  border: 1px solid gray;
+  margin: 0 auto;
+  //width: 800px;
+  &__summary {
+    text-align: center;
+  }
+  &__title {
+    margin-bottom: 0;
+  }
+  &__description {
+    margin-top: 10px;
+  }
+  .farmraiser-logo {
+    position: absolute;
+    top: 20px;
+    left: 5%;
+  }
+  &__logo {
+    position: absolute;
+    top: 20px;
+    right: 5%;
+  }
+  &__logo, .farmraiser-logo {
+    width: 100px;
+    height: 100px;
+    background: yellow;
+  }
+  &__product {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    border: 1px solid green;
+    > div {
+      float: left;
+    }
+  }
+}
+.product {
+  &__img-wrapper {
+    width: 100px;
+    height: 100px;
+    background: yellow;
+  }
+  &__price {
+    background: seagreen;
+  }
+  &__title {
+    margin: 0;
+  }
+  &__summary {
+    padding: 0 10px;
+    p + p {
+      margin-top: 5px;
+    }
+  }
+  &__price {
+    padding: 0 10px;
+    color: white;
+  }
+}
+
+
+table {
+  width: 60%;
+  margin: 50px auto;
+}
+
+table td {
+  //border: 1px solid;
+  padding: 5px;
+}
+
+table .row-header, table th {
+  border: 1px solid;
+  padding: 10px;
+  text-align: center;
+}
+
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 0;
+  width: 100%;
+  height: 50px;
+  color: #fff;
+}
+
+.non-existent {
+  background: gray;
+}
+
+.available {
+  background: green;
 }
