working grid modes

--- a/app/includes/_passapp-cinema-grid.pug
+++ b/app/includes/_passapp-cinema-grid.pug
@@ -1,6 +1,6 @@
 .container
   .modes-actions
-    .btn Booking Mode
-    .btn Disabling Mode
-    .btn Setting seats types
+    button.btn(data-action-mode="seats-booking") Booking Seats Mode
+    button.btn(data-action-mode="seats-layout") Edit Seats Layout Mode
+    button.btn(data-action-mode="seats-type") Setting Seats Types
   .seats-grid
