--- a/app/includes/_home.pug
+++ b/app/includes/_home.pug
@@ -6,7 +6,7 @@
     .rect4
     .rect5
   input#speech(type='text')
-  button#rec.btn Speak
+  //button#rec.btn(disabled="disabled") Speak
   button#reset.btn Reset
   #spokenResponse.spoken-response
     .spoken-response__text
