--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -39,7 +39,6 @@ html {
   box-sizing: inherit;
 }
 body {
-  background-color: #192837;
   font-family: "Titillium Web", Arial, sans-serif;
   font-size: 20px;
   margin: 0;
@@ -49,6 +48,7 @@ body {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
+  max-width: 535px!important;
 }
 input {
   background-color: #126077;
@@ -114,6 +114,7 @@ input:active, input:focus, textarea:active, textarea:focus {
   -webkit-transition: all 0.35s ease-in;
 }
 .spoken-response.is-active {
+  margin-top: 5px;
   max-height: 400px;
 }
 .spoken-response__text {
@@ -176,4 +177,68 @@ input:active, input:focus, textarea:active, textarea:focus {
        transform: scaleY(1.0);
        -webkit-transform: scaleY(1.0);
      }
+}
+
+svg {
+  background-color: #FFF;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+svg:not(.active):not(.ctrl) {
+  cursor: crosshair;
+}
+
+path.link {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 4px;
+  cursor: default;
+}
+
+svg:not(.active):not(.ctrl) path.link {
+  cursor: pointer;
+}
+
+path.link.selected {
+  stroke-dasharray: 10,2;
+}
+
+path.link.dragline {
+  pointer-events: none;
+}
+
+path.link.hidden {
+  stroke-width: 0;
+}
+
+circle.node {
+  stroke-width: 1.5px;
+  cursor: pointer;
+}
+
+circle.node.reflexive {
+  stroke: #000 !important;
+  stroke-width: 2.5px;
+}
+
+text {
+  font: 12px sans-serif;
+  pointer-events: none;
+}
+
+text.id {
+  text-anchor: middle;
+  font-weight: bold;
+}
+
+
+#container {
+  width: 75vw;
+  height: 75vh;
+  margin: 12vh auto;
 }
